Create home and related components

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,4 +11,9 @@ body {
 
 h1 {
 	font-family: "DM Serif Display", serif;
+	letter-spacing: 0.05rem;
+}
+
+.home-bg {
+	background: linear-gradient(110.8deg, #f5564e 0%, #8222a5 100%);
 }
