--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -1,7 +1,7 @@
 $theme-colors: (
 	"primary": #8222a5,
-	"secondary": #f5564e,
-	"tertiary": #f7a565,
+	"secondary": #f7a565,
+	"tertiary": #f5564e,
 	"light": #f8f6ee,
 	"dark": #140519,
 );
