Create card for recipes results

--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -2,6 +2,7 @@ $theme-colors: (
 	"primary": #8222a5,
 	"secondary": #f7a565,
 	"tertiary": #f5564e,
+	"quaternary": #ce3a7c,
 	"light": #f8f6ee,
 	"dark": #140519,
 );
