Start populating results page

--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -7,6 +7,10 @@ $theme-colors: (
 	"dark": #140519,
 );
 
+$link-color: #8222a5;
+$component-active-color: #f8f6ee;
+$component-active-bg: #8222a5;
+
 $body-color: #140519;
 $body-bg: #f8f6ee;
 
